apps/website/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website
  annotations:
    external-dns.typie.io/enabled: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http
      namespace: infra
  hostnames:
    - typie.dev
    - auth.typie.dev
    - typie.app
    - "*.typie.app"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: website
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
